Fixed dist zip structure Moved images and i18n from python to java